# swift-package-manager

./: NOTICE.txt  Package.swift
Sources/: CMakeLists.txt
Sources/Basics/: CMakeLists.txt  GitShellHelper.swift
Sources/Commands/: CMakeLists.txt  SwiftPackageCollectionsTool.swift  SwiftTool.swift
Sources/PackageCollections/: CMakeLists.txt  PackageCollections+CertificatePolicy.swift  PackageCollections+Configuration.swift  PackageCollections+Validation.swift  Utility.swift
Sources/PackageCollections/Providers/: GitHubPackageMetadataProvider.swift  JSONPackageCollectionProvider.swift  PackageMetadataProvider.swift
Sources/PackageCollectionsModel/: CMakeLists.txt  PackageCollectionGeneratorModel.swift  PackageCollectionModel+v1.swift
Sources/PackageCollectionsSigning/: CMakeLists.txt  CertificatePolicy.swift  PackageCollectionSigning.swift  PackageCollectionsSigning.swift
Sources/PackageCollectionsSigning/Certificate/: Certificate.swift  CertificatePolicy.swift
Sources/PackageCollectionsSigning/Key/: BoringSSLKey.swift  Key+RSA.swift  Key.swift
Sources/PackageCollectionsSigning/Signing/: BoringSSLSigning.swift  Signature.swift  Signing+ECKey.swift  Signing+RSAKey.swift
Sources/PackageCollectionsSigning/Utilities/: Base64URL.swift  Utilities.swift
Sources/PackageCollectionsSigningLibc/: CMakeLists.txt  ocsp_asn.c  ocsp_cl.c  ocsp_lib.c
Sources/PackageCollectionsSigningLibc/asn1/: a_d2i_fp.c  a_i2d_fp.c
Sources/PackageCollectionsSigningLibc/include/: CCollectionSigning_asn1.h  CCollectionSigning_ocsp.h  CCollectionSigning_ocsp_local.h
Sources/PackageLoading/: CMakeLists.txt  ManifestLoader.swift  ManifestSignatureParser.swift
Sources/PackageRegistry/: CMakeLists.txt  RegistryManager.swift  Utility.swift
Sources/PackageRegistry/Checksum/: ChecksumStorage.swift  FileChecksumStorage.swift
Sources/PackageRegistryTool/: PackageRegistryTool+Publish.swift  PackageRegistryTool+Sign.swift
Sources/PackageSigning/: SignatureProvider.swift  Signer.swift  SigningEntity.swift  SigningIdentity.swift  X509Extensions.swift
Sources/SPMTestSupport/: SigningTestUtils.swift  SwiftPMProduct.swift
Sources/Signing/: CMakeLists.txt
Sources/Signing/Certificate/: Certificate.swift  CertificatePolicy.swift
Sources/Signing/Key/: Key+EC.swift  Key+RSA.swift  Key.swift
Sources/Signing/Signing/: Signature.swift  Signing+ECKey.swift  Signing+RSAKey.swift  Signing.swift
Sources/Signing/Utilities/: Utilities.swift
Sources/SigningLibc/: CMakeLists.txt  ocsp_asn.c  ocsp_cl.c  ocsp_lib.c  ocsp_vfy.c
Sources/SigningLibc/asn1/: a_d2i_fp.c  a_i2d_fp.c
Sources/SigningLibc/include/: CSigning_asn1.h  CSigning_obj_mac.h  (+4 more)
Sources/SourceControl/: GitRepository.swift
Sources/Workspace/: Workspace.swift
Tests/CommandsTests/: PackageCollectionsToolTests.swift  PackageRegistryToolTests.swift
Tests/PackageCollectionsSigningTests/: CertificatePolicyTests.swift  PackageCollectionSigningTest.swift  PackageCollectionsSigningTests.swift  Utilities.swift
Tests/PackageCollectionsTests/: JSONPackageCollectionProviderTests.swift  PackageCollectionSourceCertificatePolicyTests.swift  PackageCollectionsTests.swift  Utility.swift
Tests/PackageLoadingTests/: ManifestSignatureParserTests.swift
Tests/PackageRegistryTests/: FileChecksumStorageTests.swift  RegistryManagerTests.swift
Tests/PackageSigningTests/: SigningIdentityTests.swift  SigningTests.swift
Tests/SigningTests/: CertificatePolicyTests.swift  CertificateTests.swift  KeyTests+EC.swift  KeyTests+RSA.swift  SignatureTests.swift  SigningTests+ECKey.swift  SigningTests+RSAKey.swift
